frontend/test/should_fail/delretypesame_004_e.grg
rule r{	-e:Edge->;	p:P(e);		modify {		delete(e);		p();	}}pattern P(-e:Edge->){	modify {		-f:Edge<e>->;	}}